test/visibility/private/functions/accessSibling.good
accessSibling.chpl:10: In function 'main':
accessSibling.chpl:11: error: cannot access 'foo' as it is private to 'M1'
